force-app/main/default/objects/Fee_plan__c/Fee_plan__c.object-meta.xml
<CustomObject>
    <label>Fee plan</label>
    <nameField>
        <label>Fee plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fee plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>