force-app/main/default/objects/Fee_plan__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class</label>
    <referenceTo>Class__c</referenceTo>
    <relationshipLabel>Fee plans</relationshipLabel>
    <relationshipName>Fee_plans</relationshipName>
    <type>Lookup</type>
</CustomField>