force-app/main/default/objects/Fee_plan__c/fields/Discount_Amount_Value__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount_Value__c</fullName>
    <label>Discount Amount Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>