force-app/main/default/objects/Fee_plan__c/fields/Discount_Percentage_Value__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percentage_Value__c</fullName>
    <label>Discount Percentage Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>