force-app/main/default/objects/Fee_plan__c/fields/Fee_Plan_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Fee_Plan_End_Date__c</fullName>
    <label>Fee Plan End Date</label>
    <type>Date</type>
</CustomField>