force-app/main/default/objects/Fee_plan__c/fields/Fees_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Fees_Due_Date__c</fullName>
    <label>Fees Due Date</label>
    <type>Date</type>
</CustomField>