force-app/main/default/objects/Fee_plan__c/fields/Paid_After__c.field-meta.xml
<CustomField>
    <fullName>Paid_After__c</fullName>
    <label>Paid After</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>