force-app/main/default/objects/Fee_plan__c/fields/Penalty_Amount_Value__c.field-meta.xml
<CustomField>
    <fullName>Penalty_Amount_Value__c</fullName>
    <label>Penalty Amount Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>