force-app/main/default/objects/Fee_plan__c/fields/Penalty_Mode__c.field-meta.xml
<CustomField>
    <fullName>Penalty_Mode__c</fullName>
    <label>Penalty Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rs(₹)</fullName>
            </value>
            <value>
                <fullName>Percentage(%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>