force-app/main/default/objects/Fee_plan__c/fields/Plan_Generated__c.field-meta.xml
<CustomField>
    <fullName>Plan_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plan Generated</label>
    <type>Checkbox</type>
</CustomField>