force-app/main/default/objects/Fee_plan__c/fields/Show_Discount__c.field-meta.xml
<CustomField>
    <fullName>Show_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Discount</label>
    <type>Checkbox</type>
</CustomField>