force-app/main/default/objects/Fee_plan__c/fields/Show_Penalty__c.field-meta.xml
<CustomField>
    <fullName>Show_Penalty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Penalty</label>
    <type>Checkbox</type>
</CustomField>