force-app/main/default/objects/Fee_plan__c/fields/Total_Number_of_Students__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Students__c</fullName>
    <label>Total Number of Students</label>
    <length>50</length>
    <type>Text</type>
</CustomField>